[package]
name = "traitlit"
version = "0.1.0"
authors = ["Adam <adam.and.math@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["full"] }
proc-macro2 = "0.4"
quote = "0.6"