[package]
name = "traitlit"
version = "0.2.2"
authors = ["Adam <adam.and.math@gmail.com>"]
edition = "2018"
description = "This crate exposes an atribute for implementing traits for integer and float types."
keywords = ["macro", "proc_macro", "integer", "numeric"]
repository = "https://github.com/adamAndMath/traitlit"
license = "MIT"
readme = "README.md"
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["full"] }
proc-macro2 = "0.4"
quote = "0.6"